--- a/WebRoot/WebRoot/html/categorymanager.html
+++ b/WebRoot/WebRoot/html/categorymanager.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Insert title here</title>
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <script src="/approveProject/js/jquery.min.js"></script>
+    <script src="/approveProject/js/bootstrap.min.js"></script>
+    <link href="/approveProject/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
