--- a/WebRoot/WebRoot/html/infoChart.html
+++ b/WebRoot/WebRoot/html/infoChart.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/charts_style.css">
+    <link rel="stylesheet" type="text/css" href="/approveProject/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/approveProject/css/charts_style.css">
 
     <body>
         <div class="text-center content">
@@ -34,9 +34,9 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="../js/echarts.js"></script>
-        <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="../js/jquery.min.js"></script>
+        <script type="text/javascript" src="/approveProject/js/echarts.js"></script>
+        <script type="text/javascript" src="/approveProject/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/approveProject/js/jquery.min.js"></script>
         <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
         var myChart = echarts.init(document.getElementById('p1'));
