--- a/WebRoot/WebRoot/html/InfoDetails.html
+++ b/WebRoot/WebRoot/html/InfoDetails.html
@@ -7,18 +7,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="gbtags.com">
 <title>科技部科技项目审批系统</title>
-<link href="http://localhost:8080/approveProject/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="/approveProject/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <!-- Fonts -->
-<link href="http://localhost:8080/approveProject/font-awesome/css/font-awesome.min.css" rel="stylesheet"
+<link href="/approveProject/font-awesome/css/font-awesome.min.css" rel="stylesheet"
 	type="text/css">
-<link href="http://localhost:8080/approveProject/css/animate.css" rel="stylesheet" />
+<link href="/approveProject/css/animate.css" rel="stylesheet" />
 <!-- Squad theme CSS -->
-<link href="http://localhost:8080/approveProject/css/style.css" rel="stylesheet">
-<link href="http://localhost:8080/approveProject/color/default.css" rel="stylesheet">
-<link rel="stylesheet" href="http://localhost:8080/approveProject/css/common.css" />
+<link href="/approveProject/css/style.css" rel="stylesheet">
+<link href="/approveProject/color/default.css" rel="stylesheet">
+<link rel="stylesheet" href="/approveProject/css/common.css" />
 <!-- 基本样式 -->
-<link href="http://localhost:8080/approveProject/css/bootstrap-responsive.min.css" rel="stylesheet" />
-<link href="http://localhost:8080/approveProject/css/bwizard.min.css" rel="stylesheet" />
+<link href="/approveProject/css/bootstrap-responsive.min.css" rel="stylesheet" />
+<link href="/approveProject/css/bwizard.min.css" rel="stylesheet" />
 
 </head>
 
@@ -33,7 +33,10 @@
 	</nav>
 	<div class="container" style="min-height:800px;width:900px; ;margin-left:auto ;margin-right: auto;background-color: #F5F5F5">
 		
-		<h1 id="title" style="text-align: center;margin-top: 160px;">标题<span id="time" style="font-size: 10px;background-color: #5df;margin-left: 20px;">发布时间：</span></h1>
+		<h1 id="title" style="text-align: center;margin-top: 160px;">标题</h1>
+		<div style="height: 40px;text-align: center;padding-top: 10px;">
+		<span id="time" style="font-size: 10px;background-color: #5df;margin-left: 20px;">发布时间：</span>
+		</div>
 		<div id="content">
 			
 		
@@ -45,31 +48,35 @@
 		
 	</footer>
 	<!-- Core JavaScript Files -->
-	<script src="http://localhost:8080/approveProject/js/jquery.min.js"></script>
-	<script src="http://localhost:8080/approveProject/js/bootstrap.min.js"></script>
-	<script src="http://localhost:8080/approveProject/js/jquery.easing.min.js"></script>
-	<script src="http://localhost:8080/approveProject/js/jquery.scrollTo.js"></script>
-	<script src="http://localhost:8080/approveProject/js/wow.min.js"></script>
+	<script src="/approveProject/js/jquery.min.js"></script>
+	<script src="/approveProject/js/bootstrap.min.js"></script>
+	<script src="/approveProject/js/jquery.easing.min.js"></script>
+	<script src="/approveProject/js/jquery.scrollTo.js"></script>
+	<script src="/approveProject/js/wow.min.js"></script>
 	<!-- Custom Theme JavaScript -->
-	<script src="http://localhost:8080/approveProject/js/custom.js"></script>
-	<script src="http://localhost:8080/approveProject/js/jquery.hDialog.js"></script>
-	<script src="http://localhost:8080/approveProject/js/bwizard.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="http://localhost:8080/approveProject/js/loadFile.js"></script>
-	<script type="text/javascript" src="http://localhost:8080/approveProject/utf8-jsp/ueditor.all.min.js"></script>
+	<script src="/approveProject/js/custom.js"></script>
+	<script src="/approveProject/js/jquery.hDialog.js"></script>
+	<script src="/approveProject/js/bwizard.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/approveProject/js/loadFile.js"></script>
+	<script type="text/javascript" src="/approveProject/utf8-jsp/ueditor.all.min.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			
 			url=window.location.href;
 			 var paraString =url.substring(url.indexOf("?")+1, url.length).split("="); 
-			$.get("http://localhost:8080/approveProject/getInfoDetail.action?id="+paraString[1],function(data){
+			$.get("/approveProject/getInfoDetail.action?id="+paraString[1],function(data){
 				$('#title').html(data.title);
-				$('#time').html(data.publishtime);
+				alert(data.publishtime);
+				$('#time').html(getDateTime(new Date(data.publishtime)));
 				$('#content').html(data.content);
 				
 			})
 		})
 	
-	
+	 function getDateTime(date){
+
+            return ""+date.getFullYear()+"-"+date.getMonth()+"-"+date.getDate();
+        }
 	
 	</script>
 
