--- a/WebRoot/WebRoot/html/nav.html
+++ b/WebRoot/WebRoot/html/nav.html
@@ -4,16 +4,16 @@
 			data-target=".navbar-main-collapse">
 			<i class="fa fa-bars"></i>
 		</button>
-		<a class="navbar-brand" href="http://localhost:8080/approveProject/index2.html">
+		<a class="navbar-brand" href="/approveProject/index2.html">
 			<h1>科技部科技项目审批系统</h1>
 		</a>
 	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
-			<li class="active"><a href="http://localhost:8080/approveProject/index2.html#intro">首页</a></li>
-			<li><a href="http://localhost:8080/approveProject/index2.html#about">科技资讯</a></li>
-			<li><a href="http://localhost:8080/approveProject/index2.html#service">审批流程</a></li>
+			<li class="active"><a href="/approveProject/index2.html#intro">首页</a></li>
+			<li><a href="/approveProject/index2.html#about">科技资讯</a></li>
+			<li><a href="/approveProject/index2.html#service">审批流程</a></li>
 
 			<li id="" class="dropdown"><a href="#"
 				class="dropdown-toggle user-a " data-toggle="dropdown">登陆|注册<span class='glyphicon glyphicon-chevron-down'></span></a>
