--- a/WebRoot/WebRoot/html/writeInfo.html
+++ b/WebRoot/WebRoot/html/writeInfo.html
@@ -62,14 +62,14 @@ white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
 
 </body>
 
-<script type="text/javascript" src="../js/jquery.min.js"></script>
-<script type="text/javascript"src="http://localhost:8080/approveProject/js/jquery.hDialog.js"></script>
-<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
- <script type="text/javascript" charset="utf-8" src="../utf8-jsp/ueditor.config.js"></script>
-    <script type="text/javascript" charset="utf-8" src="../utf8-jsp/ueditor.all.min.js"> </script>
+<script type="text/javascript" src="/approveProject/js/jquery.min.js"></script>
+<script type="text/javascript"src="/approveProject/js/jquery.hDialog.js"></script>
+<link href="/approveProject/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+ <script type="text/javascript" charset="utf-8" src="/approveProject/utf8-jsp/ueditor.config.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/approveProject/utf8-jsp/ueditor.all.min.js"> </script>
     <!--建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败-->
     <!--这里加载的语言文件会覆盖你在配置项目里添加的语言类型，比如你在配置项目里配置的是英文，这里加载的中文，那最后就是中文-->
-    <script type="text/javascript" charset="utf-8" src="../utf8-jsp/lang/zh-cn/zh-cn.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/approveProject/utf8-jsp/lang/zh-cn/zh-cn.js"></script>
     <script type="text/javascript">
     var ue = UE.getEditor('container');
     var obj={content:"",type_id:1,title:""};
@@ -90,7 +90,7 @@ white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
     	
     	//获取所有的type
     	function getInfoTypes(){
-			$.get("http://localhost:8080/approveProject/getInfoType.action",function(data){
+			$.get("/approveProject/getInfoType.action",function(data){
     			for(var i=0;i<data.length;i++){
     				$('#articleType').append("<option value='"+data[i].id+"'>"+data[i].name+"</option>");
     			}
@@ -116,7 +116,7 @@ white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
     		
     	}
     	function newAsDraft(obj){
-    		$.post("http://localhost:8080/approveProject/saveAsDraft.action",{title:obj.title,content:obj.content,type_id:obj.type_id},function(data){
+    		$.post("/approveProject/saveAsDraft.action",{title:obj.title,content:obj.content,type_id:obj.type_id},function(data){
      			if(data!="failed"){
      				$('#id').val(data);
      				$.tooltip("已经保存到草稿箱！",2000,true);
@@ -124,7 +124,7 @@ white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
      		})
     	}
     	function updateDraft(id,obj){
-    		$.post("http://localhost:8080/approveProject/updateDraft.action",{id:id,title:obj.title,content:obj.content,type_id:obj.type_id},function(data){
+    		$.post("/approveProject/updateDraft.action",{id:id,title:obj.title,content:obj.content,type_id:obj.type_id},function(data){
      			if(data!="failed"){
      				$.tooltip("已经保存到草稿箱！",2000,true);
      			}
@@ -145,7 +145,7 @@ white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
     	}
     	//新建并直接发布
     	function newPublish(obj){
-    		$.post("http://localhost:8080/approveProject/newAsDraftAndPub.action",{title:obj.title,content:obj.content,type_id:obj.type_id},function(data){
+    		$.post("/approveProject/newAsDraftAndPub.action",{title:obj.title,content:obj.content,type_id:obj.type_id},function(data){
      			if(data!="failed"){
      				$.tooltip("已经发布成功！",2000,true);
      				var t=setTimeout("location.href=location.href;",1000)
@@ -154,7 +154,7 @@ white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
     	}
     	//已经存在记录了，可以先update再发布
     	function publishByID(info_id,obj){
-    		$.post("http://localhost:8080/approveProject/publishByID.action",{id:info_id,title:obj.title,content:obj.content,type_id:obj.type_id},function(data){
+    		$.post("/approveProject/publishByID.action",{id:info_id,title:obj.title,content:obj.content,type_id:obj.type_id},function(data){
      			if(data!="failed"){
      				$.tooltip("发布成功！",2000,true);
      				var t=setTimeout("location.href=location.href;",1000)
