--- a/WebRoot/WebRoot/user_center_project_shengbao.html
+++ b/WebRoot/WebRoot/user_center_project_shengbao.html
@@ -7,18 +7,18 @@
     <meta name="author" content="gbtags.com">
     <title>科技部科技项目审批系统</title>
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/approveProject/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="css/animate.css" rel="stylesheet" />
+    <link href="/approveProject/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/approveProject/css/animate.css" rel="stylesheet" />
     <!-- Squad theme CSS -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="color/default.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/common.css" />
+    <link href="/approveProject/css/style.css" rel="stylesheet">
+    <link href="/approveProject/color/default.css" rel="stylesheet">
+    <link rel="stylesheet" href="/approveProject/css/common.css" />
     <!-- 基本样式 -->
-    <link href="css/bootstrap-responsive.min.css" rel="stylesheet" />
-    <link href="css/bwizard.min.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="css/user_c.css">
+    <link href="/approveProject/css/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="/approveProject/css/bwizard.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/approveProject/css/user_c.css">
     <style type="text/css">
 /*     	table tbody tr:hover { */
 /*     		cursor: pointer; */
@@ -52,7 +52,7 @@
     <!-- Section: intro -->
     <!-- /Section: services -->
     <article>
-        <img src="img/bg1.jpg" style="width:100%;height:200px;" alt="">
+        <img src="/approveProject/img/bg1.jpg" style="width:100%;height:200px;" alt="">
         <div class="container1">
             <div class=" panel panel-default">
                 <div id="bar" class=" panel-heading">
@@ -95,22 +95,22 @@
     <div id="reglog"></div>
     <footer></footer>
     <!-- Core JavaScript Files -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/jquery.scrollTo.js"></script>
-    <script src="js/wow.min.js"></script>
+    <script src="/approveProject/js/jquery.min.js"></script>
+    <script src="/approveProject/js/bootstrap.min.js"></script>
+    <script src="/approveProject/js/jquery.easing.min.js"></script>
+    <script src="/approveProject/js/jquery.scrollTo.js"></script>
+    <script src="/approveProject/js/wow.min.js"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="js/custom.js"></script>
-    <script src="js/jquery.hDialog.js"></script>
-    <script src="js/bwizard.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/loadFile.js"></script>
+    <script src="/approveProject/js/custom.js"></script>
+    <script src="/approveProject/js/jquery.hDialog.js"></script>
+    <script src="/approveProject/js/bwizard.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/approveProject/js/loadFile.js"></script>
     
     <script type="text/javascript">
     var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
     document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fac45a0f68a119fbe4d1c4c3ac3044dbd' type='text/javascript'%3E%3C/script%3E"));
     </script>
-    <script src="js/extendPagination.js"></script>
+    <script src="/approveProject/js/extendPagination.js"></script>
     <script type="text/javascript">
     var source;
    $(function(){
@@ -158,7 +158,7 @@
 
         }
         function getdata(obj){
-            $.post("getAPPListByStatus.action",{status:obj-1},function(data){
+            $.post("/approveProject/getAPPListByStatus.action",{status:obj-1},function(data){
             	
             	if(data!=""){
     				callBackPagination(obj,data,5,10);
@@ -184,7 +184,7 @@
         }
         //设置数量span
         function getNums(){
-        	$.get("eachNum.action",function(data){
+        	$.get("/approveProject/eachNum.action",function(data){
         		for(var i=0;i<data.length;i++){
         			 $('#bar > ul >li').eq(i).children("a").eq(0).children("span").text(data[i]);
         		}
