--- a/WebRoot/WebRoot/user_message.html
+++ b/WebRoot/WebRoot/user_message.html
@@ -7,18 +7,18 @@
     <meta name="author" content="gbtags.com">
     <title>科技部科技项目审批系统</title>
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/approveProject/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="css/animate.css" rel="stylesheet" />
+    <link href="/approveProject/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/approveProject/css/animate.css" rel="stylesheet" />
     <!-- Squad theme CSS -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="color/default.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/common.css" />
+    <link href="/approveProject/css/style.css" rel="stylesheet">
+    <link href="/approveProject/color/default.css" rel="stylesheet">
+    <link rel="stylesheet" href="/approveProject/css/common.css" />
     <!-- 基本样式 -->
-    <link href="css/bootstrap-responsive.min.css" rel="stylesheet" />
-    <link href="css/bwizard.min.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="css/user_c.css">
+    <link href="/approveProject/css/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="/approveProject/css/bwizard.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/approveProject/css/user_c.css">
 
 </head>
 
@@ -33,7 +33,7 @@
     <!-- Section: intro -->
     <!-- /Section: services -->
     <article>
-        <img src="img/bg1.jpg" style="width:100%;height:200px;" alt="">
+        <img src="/approveProject/img/bg1.jpg" style="width:100%;height:200px;" alt="">
         <div class="container" style="width:800px;">
 
             <div class="panel " >
@@ -123,16 +123,16 @@
     <div id="reglog"></div>
     <footer></footer>
     <!-- Core JavaScript Files -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/jquery.scrollTo.js"></script>
-    <script src="js/wow.min.js"></script>
+    <script src="/approveProject/js/jquery.min.js"></script>
+    <script src="/approveProject/js/bootstrap.min.js"></script>
+    <script src="/approveProject/js/jquery.easing.min.js"></script>
+    <script src="/approveProject/js/jquery.scrollTo.js"></script>
+    <script src="/approveProject/js/wow.min.js"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="js/custom.js"></script>
-    <script src="js/jquery.hDialog.js"></script>
-    <script src="js/bwizard.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/loadFile.js"></script>
+    <script src="/approveProject/js/custom.js"></script>
+    <script src="/approveProject/js/jquery.hDialog.js"></script>
+    <script src="/approveProject/js/bwizard.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/approveProject/js/loadFile.js"></script>
   
     <script type="text/javascript">
     $(function() {
@@ -144,7 +144,7 @@
     //查询用户所有的信息
     function userInfo(){
     	$('p').text("*");
-    	$.get("userInfo.action",function(data,status){
+    	$.get("/approveProject/userInfo.action",function(data,status){
     		
     		$('#username').text(data.username);
     		$('#name').text(data.name);
